--- a/app.json
+++ b/app.json
@@ -1,17 +1,14 @@
 {
   "expo": {
-    "name": "GerenciamentoDeAtivos",
-    "slug": "GerenciamentoDeAtivos",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "name": "gestaoAtivos",
+    "slug": "gestaoAtivos",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/icon.png"
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,6 +19,14 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": "O projeto tem foco na geolocalização da Estácio da unidade Moreira Campos, Fortaleza/CE, entretanto, outros detalhes também foram implementados, para engrandecer o mesmo."
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      }
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
+    }
   }
 }
