--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.11",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "^41.0.1",
-    "firebase": "8.6.1",
+    "firebase": "8.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.10.3",
-    "react-native-maps": "0.28.0",
+    "react-native-maps": "0.27.1",
     "react-native-material-dropdown-v2": "^0.11.1",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.2.0",
+    "react-native-screens": "3.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.16.3"
   },
