--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "expo": "^41.0.1",
+    "expo": "~41.0.1",
     "firebase": "8.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,7 +19,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.10.3",
     "react-native-maps": "0.27.1",
-    "react-native-material-dropdown-v2": "^0.11.1",
+    "react-native-material-dropdown-v2-fixed": "^0.11.3",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
