--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/pattaya": "^0.1.0",
     "@firebase/app": "^0.6.22",
+    "@react-native-community/datetimepicker": "^3.5.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -22,6 +23,7 @@
     "react-native-gesture-handler": "~1.10.3",
     "react-native-maps": "0.27.1",
     "react-native-material-dropdown-v2-fixed": "^0.11.3",
+    "react-native-modal-datetime-picker": "^10.0.0",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
