--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@expo-google-fonts/pattaya": "^0.1.0",
     "@firebase/app": "^0.6.22",
     "@react-native-community/datetimepicker": "^3.5.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-location": "~12.0.4",
     "firebase": "^8.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.10.3",
+    "react-native-location": "^2.5.0",
     "react-native-maps": "0.27.1",
     "react-native-material-dropdown-v2-fixed": "^0.11.3",
     "react-native-modal-datetime-picker": "^10.0.0",
