--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/pattaya": "^0.1.0",
+    "@expo-google-fonts/roboto": "^0.1.0",
     "@firebase/app": "^0.6.22",
     "@react-native-community/datetimepicker": "^3.5.1",
     "@react-native-community/geolocation": "^2.0.2",
@@ -16,7 +17,9 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-font": "~9.1.0",
     "expo-location": "~12.0.4",
+    "expo-secure-store": "~10.1.0",
     "firebase": "^8.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
